@@ -2,7 +2,7 @@ The version number is hardcoded into sdparm.c (in a C string);
 the rpm spec file: sdparm.spec ; the debian/changelog file;
 and the configure.ac file (in the AC_INIT item).
 
-ChangeLog for sdparm-1.04 [20090602] [svn: r118]
+ChangeLog for sdparm-1.04 [20090607] [svn: r119]
   - add SAT ATA Power condition mode page (sat2r06)
   - sync with spc4r20
   - add Power condition, update extended inquiry VPD pages
@@ -10,6 +10,7 @@ ChangeLog for sdparm-1.04 [20090602] [svn: r118]
   - update Power condition mode page
   - rename SAS-2 phy mode page to Enhanced phy control (SAS)
   - add ADC mode (sub)page place holders
+  - print mode page descriptors in full in more contexts
   - add linux bsg support
   - rework the '-w' option (win32) per sg_scan in sg3_utils
   - change SDPARM_* constants to SG_LIB_*
